Closed
Bug 1321969
Opened 9 years ago
Closed 9 years ago
Crash in nsGlobalWindow::GetLocalStorage
Categories
(Core :: DOM: Security, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla53
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | unaffected |
| firefox51 | --- | unaffected |
| firefox52 | --- | unaffected |
| firefox53 | + | fixed |
People
(Reporter: marcia, Assigned: huseby)
References
Details
(Keywords: crash, topcrash, Whiteboard: [OA])
Crash Data
Attachments
(1 file, 1 obsolete file)
|
1.30 KB,
patch
|
bkelly
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-585caff3-7151-4128-a52c-c44a52161203.
=============================================================
Seen while looking at nightly crash stats - this one started using the 20161202030204 build: http://bit.ly/2fWBrzO.
Possible regression range: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=cd4cdcc9ad6c45dad8b8d8c0d40e459db2bca8a1&tochange=f65ad27efe839ce9df0283840a1a40b4bbc9ead0
Bug 1316075 I think touched code in this area. ni on Dave.
Flags: needinfo?(huseby)
Comment 1•9 years ago
|
||
In Nightly 20161202030204 this is the #1 crash once shutdown hang crashes are excluded, with 67 occurrences.
It started in Nightly 20161202030204. Regression window for that build includes bug 1316075:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=cd4cdcc9ad6c45dad8b8d8c0d40e459db2bca8a1&tochange=f65ad27efe839ce9df0283840a1a40b4bbc9ead0
Comment 2•9 years ago
|
||
[Tracking Requested - why for this release]: top crash
tracking-firefox53:
--- → ?
Keywords: topcrash
Updated•9 years ago
|
status-firefox52:
--- → unaffected
Comment 3•9 years ago
|
||
(In reply to Marcia Knous [:marcia - use ni] from comment #0)
> Bug 1316075 I think touched code in this area. ni on Dave.
Yeah, this is crashing on a release assertion that that patch added.
| Reporter | ||
Updated•9 years ago
|
Crash Signature: [@ nsGlobalWindow::GetLocalStorage] → [@ nsGlobalWindow::GetLocalStorage]
[@ nsGlobalWindow::GetSessionStorage]
| Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(huseby)
| Assignee | ||
Comment 4•9 years ago
|
||
Bug 1316075 is the problem. The fix for now is to comment it out while I investigate why the values aren't in sync there.
| Assignee | ||
Comment 5•9 years ago
|
||
I have no idea why the PB flag and the OA aren't the same in that spot. This patch removes it for now while I investigate.
| Assignee | ||
Comment 6•9 years ago
|
||
| Reporter | ||
Updated•9 years ago
|
Crash Signature: [@ nsGlobalWindow::GetLocalStorage]
[@ nsGlobalWindow::GetSessionStorage] → [@ nsGlobalWindow::GetLocalStorage]
[@ nsGlobalWindow::GetSessionStorage]
[@ nsWindowWatcher::OpenWindowInternal]
Comment 8•9 years ago
|
||
Comment on attachment 8817461 [details] [diff] [review]
Bug_1321969.patch
Can we comment it out instead? Along with a comment that it will be added back in bug number X, where X is a new or an existing bug where we will figure out the issues and fix them?
Thanks for taking this quickly Dave!
Updated•9 years ago
|
Priority: -- → P1
Whiteboard: [OA]
| Assignee | ||
Comment 9•9 years ago
|
||
modified to comment the assert out with a comment. thanks tanvi.
Attachment #8817461 -
Attachment is obsolete: true
Attachment #8817461 -
Flags: review?(ehsan)
Attachment #8817712 -
Flags: review?(amarchesini)
| Assignee | ||
Comment 10•9 years ago
|
||
| Assignee | ||
Updated•9 years ago
|
Attachment #8817712 -
Flags: review?(amarchesini) → review?(bkelly)
Comment 11•9 years ago
|
||
#6 topcrash in Nightly 20161209030212. Will be good to get a fix soon :)
Comment 12•9 years ago
|
||
Comment on attachment 8817712 [details] [diff] [review]
Bug_1321969.patch
Review of attachment 8817712 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM as long as we are following up to fix it.
I wonder if this is a case where you simply don't have a docshell any more so the IsPrivateBrowsing() returns false. Or maybe if its not the current inner window you can get different attributes on the docshell?
Attachment #8817712 -
Flags: review?(bkelly) → review+
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Comment 13•9 years ago
|
||
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/127edcc85d6f
diagnostic assert triggering top crash in nightly. r=bkelly
Keywords: checkin-needed
Comment 14•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 15•9 years ago
|
||
Still see the signature nsGlobalWindow::GetSessionStorage on crash-stats. I don't have permission to read bug 1323262, are you handling it there?
Flags: needinfo?(huseby)
Comment 16•9 years ago
|
||
(In reply to Ting-Yu Chou [:ting] from comment #15)
> Still see the signature nsGlobalWindow::GetSessionStorage on crash-stats. I
> don't have permission to read bug 1323262, are you handling it there?
No, it should be filed separately I think.
Updated•9 years ago
|
status-firefox50:
--- → unaffected
status-firefox51:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•