Bug 1321969 -- diagnostic assert triggering top crash in nightly. r=bkelly